--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -50,6 +50,35 @@
             </div>
         </nav>
     </header>
+    <div id="contenedorcliente1">
+        <div id="h1_1">
+            <h1>Servicio al cliente</h1>
+        </div>
+        <div id="h6_1">
+            <h6>¿Necesitas Ayuda?</h6>
+        </div>
+        <div id="h6_2">
+            <h6>¡Estamos para servirte!</h6>
+        </div>
+        
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
         <div class="footerContainer">
             <div class="socialIcons">
