registro casi terminado

--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="form-body">
+        <img src="../assets/imagenes/219983.png" alt="user-login">
+        <p class="text">bienvenido a maurocodex</p>
+        <form class="login-form">
+            <input type="text" placeholder="email o nombre de usuario">
+            <input type="password" placeholder="Contraseña">
+            <button>Iniciar Sesion</button>
+        </form>
+    </div>
+
     
 </body>
 </html>
