--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto" href="#">
-                    <img id="logo" src="assets/img/PUMA.png" alt="">
+                    <img id="logo" src="../assets/imagenes/logo/logo.png" alt="">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
