--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <title>Document</title>
 </head>
-<body>
+<body id="body__Registro">
     <div class="form-body">
         <img src="../assets/imagenes/219983.png" alt="user-login">
         <p class="text">bienvenido a maurocodex</p>
