--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -16,14 +16,11 @@
 </head>
 <body>
     <header>
-        <div class="div__div-logoYimg">
-            <div class="div__logoYimg">
-                <div class="logo"><img src="../../assets/imagenes/logo/logo.png" alt=""></div>
-                <div class="titulo"><h1>Drive & Dream</h1></div>
-            </div>
-        </div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+                <a class="navbar-brand me-auto" href="#">
+                    <img id="logo" src="../../assets/imagenes/logo/logo.png" alt="">
+                </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
@@ -58,5 +55,147 @@
             </div>
         </nav>
     </header>
+    <main id="tieAut__Main">
+        <div id="honda">
+            <div id="hondaImg">
+
+            </div>
+            <div id="hondaModelo">
+
+            </div>
+            <div id="hondaPrecio">
+
+            </div>
+            <div id="hondaToTerr">
+
+            </div>
+            <div id="hondaEnergia">
+
+            </div>
+            <div id="hondaDesc">
+
+            </div>
+        </div>
+        <div id="audi">
+            <div id="audiImg">
+
+            </div>
+            <div id="audiModelo">
+
+            </div>
+            <div id="audiPrecio">
+
+            </div>
+            <div id="audiToTerr">
+
+            </div>
+            <div id="audiEnergia">
+
+            </div>
+            <div id="audiDesc">
+
+            </div>
+        </div>
+        <div id="chevrolet">
+            <div id="chevrImg">
+
+            </div>
+            <div id="chevrModelo">
+
+            </div>
+            <div id="chevrPrecio">
+
+            </div>
+            <div id="chevrToTerr">
+
+            </div>
+            <div id="chevrEnergia">
+
+            </div>
+            <div id="chevrDesc">
+
+            </div>
+        </div>
+        <div id="renault">
+            <div id="renaImg">
+
+            </div>
+            <div id="renaModelo">
+
+            </div>
+            <div id="renaPrecio">
+
+            </div>
+            <div id="renaToTerr">
+
+            </div>
+            <div id="renaEnergia">
+
+            </div>
+            <div id="renaDesc">
+
+            </div>
+        </div>
+        <div id="ford">
+            <div id="fordImg">
+
+            </div>
+            <div id="fordModelo">
+
+            </div>
+            <div id="fordPrecio">
+
+            </div>
+            <div id="fordToTerr">
+
+            </div>
+            <div id="fordEnergia">
+
+            </div>
+            <div id="fordDesc">
+
+            </div>
+        </div>
+        <div id="fiat">
+            <div id="fiatImg">
+
+            </div>
+            <div id="fiatModelo">
+
+            </div>
+            <div id="fiatPrecio">
+
+            </div>
+            <div id="fiatToTerr">
+
+            </div>
+            <div id="fiatEnergia">
+
+            </div>
+            <div id="fiatDesc">
+
+            </div>
+        </div>
+        <div id="nissan">
+            <div id="nissImg">
+
+            </div>
+            <div id="nissModelo">
+
+            </div>
+            <div id="nissPrecio">
+
+            </div>
+            <div id="nissToTerr">
+
+            </div>
+            <div id="nissEnergia">
+
+            </div>
+            <div id="nissDesc">
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
