modelo de item final

--- a/paginas/tienda/autos-productos/prod-1.html
+++ b/paginas/tienda/autos-productos/prod-1.html
@@ -146,6 +146,10 @@
                         <td>|Kilometraje:</td>
                         <td class="prods__dato">0Km</td>
                     </tr>
+                    <tr>
+                        <td>|Cilindrada</td>
+                        <td>1,4</td>
+                    </tr>
                 </table>
                 <div class="prods__contacto">    
                     <button>
