--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Document</title>
+    <title>D&D - Registrarse</title>
 </head>
 <body id="body__Registro">
     <div class="form-body">
-        <img src="../assets/imagenes/219983.png" alt="user-login">
-        <p class="text">bienvenido a maurocodex</p>
+        <img src="../assets/imagenes/logo/logo.png" alt="user-login">
+        <p class="text">Iniciar sesion en Drive & Dream</p>
         <form class="login-form">
             <input type="text" placeholder="email o nombre de usuario">
             <input type="password" placeholder="Contraseña">
-            <button>Iniciar Sesion</button>
+            <button type="submit">Iniciar Sesion</button>
         </form>
     </div>
 
