--- a/paginas/tienda/autos-productos/Chevrolet/prod-2.html
+++ b/paginas/tienda/autos-productos/Chevrolet/prod-2.html
@@ -134,7 +134,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>El Cruze RS forma parte de la familia Rally Sport de Chevrolet, y cuenta con toda la potencia para ser único. Más que una versión deportiva, en el Cruze RS todos los detalles hacen la diferencia, como las nuevas llantas oscurecidas de 17" y detalles en negro Ice Chrome en el frente. ¡Subite al tuyo!</p>
+            <p>La segunda generación del mediano del moño es producida en pocos lugares del mundo y entre ellos se encuentra Argentina. El modelo se destaca por un diseño cosmopolita, un buen pulido general del chasis y por el motor 1.4L Turbo de 154 CV y generosos 245 Nm de torque. Completa un alto nivel de seguridad y trucos electrónicos interesantes el las versiones más equipadas. En 2019 llega a nuestro mercado la versión denominada Premier. Se trata del tope de gama con novedades en equipamiento, interior, estética y multimedia.</p>
         </div>
     </main>
 </body>
