--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -8,13 +8,14 @@
 </head>
 <body id="body__Registro">
     <div class="form-body">
-        <img src="../assets/imagenes/219983.png" alt="user-login">
+        <img src="../assets/imagenes/logo/logo.png" alt="user-login">
         <p class="text">bienvenido a maurocodex</p>
         <form class="login-form">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Contraseña">
-            <input type="text" placeholder="Nombre">
-            <input type="text" placeholder="Apellido">
+            <input type="email" placeholder="Nombre">
+            <input type="password" placeholder="Apellido">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Contraseña">
+            <a href="../paginas/registro.html" id="link">Ya tengo cuenta</a>
             <button>Iniciar Sesion</button>
         </form>
     </div>
