cambie el titulo del registro

--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -9,7 +9,7 @@
 <body id="body__Registro">
     <div class="form-body">
         <img src="../assets/imagenes/logo/logo.png" alt="user-login">
-        <p class="text">bienvenido a maurocodex</p>
+        <p class="text">Iniciar sesion en Drive & Dream</p>
         <form class="login-form">
             <input type="email" placeholder="Nombre">
             <input type="password" placeholder="Apellido">
