musta ciego deja el porn

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
-<body>
+<body id="bodymain">
     <header>
 
         <div class="row container-fluid cont-logo">
-            <img id="logo" src="assets/imagenes/logo/logo.png" alt="">
+            <img id="logomain" src="assets/imagenes/logo/logo.png" alt="">
             <h1 id="titulo-empresa">Drive & Dream</h1>
             <div class="cont-login">
                 <a href="./paginas/registro.html" id="login-button-principal">Login</a>
