cambie una letra xd

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -121,7 +121,7 @@
                         <h4>Energía: Fósil (ECON)</h4>
                     </div>
                     <div id="hondaDesc3">
-                        <p>Parrilla prominente, ópticas full LED con sensor crepúscular, asientos ergonómicos y plegables que permiten tres modos de utilización: Utility, Long y Tall; Espacio para 5 pasajeros, </p>
+                        <p>Parrilla prominente, ópticas full LED con sensor crepúscular, asientos ergonómicos y plegables que permiten tres modos de utilización: Utility, Long y Tall; Espacio para 5 pasajerosz </p>
                     </div>
                 </div>
             </div>
