--- a/paginas/tienda/autos-productos/Chevrolet/prod-3.html
+++ b/paginas/tienda/autos-productos/Chevrolet/prod-3.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chevrolet CRUZE 5</title>
+    <title>Chevrolet Onix Joy Plus</title>
 </head>
 <body>
     <header>
@@ -60,22 +60,34 @@
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="7" aria-label="Slide 8"></button>
                 </div>
                 <div class="carousel-inner prods__carrusel-cont">
                     <div class="carousel-item active">
-                        <img src="../../../../assets/imagenes/prod-2/img1.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prod-3/img1.png" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-2/img2.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prod-3/img2.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-2/img3.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prod-3/img3.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-2/img4.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prod-3/img4.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-2/img5.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prod-3/img5.jpg" class="d-block w-100" alt=":/">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../../../assets/imagenes/prod-3/img6.jpg" class="d-block w-100" alt=":/">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../../../assets/imagenes/prod-3/img7.jpg" class="d-block w-100" alt=":/">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../../../assets/imagenes/prod-3/img8.jpg" class="d-block w-100" alt=":/">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#prod_1Car" data-bs-slide="prev">
@@ -92,11 +104,11 @@
                 <div class="prods__volver">
                     <a href="../autos.html">Volver</a>
                 </div>
-                <h2>Chevrolet CRUZE 5</h2>
+                <h2>Chevrolet Onix Joy Plus</h2>
                 <table>
                     <tr>
                         <td>|Modelo:</td>
-                        <td class="prods__dato">2024</td>
+                        <td class="prods__dato">2013</td>
                     </tr>
                     <tr>
                         <td>|Traccion:</td>
@@ -112,11 +124,11 @@
                     </tr>
                     <tr>
                         <td>|Condicion:</td>
-                        <td class="prods__dato">Nuevo</td>
+                        <td class="prods__dato">Usado</td>
                     </tr>
                     <tr>
                         <td>|Kilometraje:</td>
-                        <td class="prods__dato">0Km</td>
+                        <td class="prods__dato">74.000Km</td>
                     </tr>
                     <tr>
                         <td>|Cilindrada</td>
@@ -134,7 +146,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>La segunda generación del mediano del moño es producida en pocos lugares del mundo y entre ellos se encuentra Argentina. El modelo se destaca por un diseño cosmopolita, un buen pulido general del chasis y por el motor 1.4L Turbo de 154 CV y generosos 245 Nm de torque. Completa un alto nivel de seguridad y trucos electrónicos interesantes el las versiones más equipadas. En 2019 llega a nuestro mercado la versión denominada Premier. Se trata del tope de gama con novedades en equipamiento, interior, estética y multimedia.</p>
+            <p>La segunda generación del Onix se volvió global y eso significó que ahora todos los modelos llevarán ese nombre, ya sean hatchback o sedán. Es por esto que el Prisma pasa a llamarse Onix PLus. Chevrolet. El Chevrolet Onix Plus JOY no es otra cosa que el anterior Prisma que pasa a ocupar la entrada de gama de la marca con misma estética y equipamiento simplificado para garantizar un precio competitivo. Mecánica y seguridad se mantienen inalterados, ofreciendo en el segundo aspecto los elementos exigidos por ley como ABS y doble airbag.</p>
         </div>
     </main>
 </body>
