--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -127,23 +127,72 @@
             </div>
         </div>
         <div id="audi">
-            <div id="audiImg">
-
+            <h2>Audi</h2>
+            <div id="audi1">
+                <div id="audiImg1">
+                    <img src="" alt="">
+                </div>
+                <div id="audiDatos1">
+                    <div id="audiModelo1">
+                        <h4>Modelo: A4 ALLROAD QUATTRO</h4>
+                    </div>
+                    <div id="audiPrecio1">
+                        <h4>$68.690.000</h4>
+                    </div>
+                    <div id="audiToTerr1">
+                        <h4>Todoterreno: SI</h4>
+                    </div>
+                    <div id="audiEnergia1">
+                        <h4>Energia: Fósil</h4>
+                    </div>
+                    <div id="audiDesc1">
+                        <p>Incorpora tecnologías de chasis y grupo motor que le permiten desenvolverse con soltura en cualquier terreno, en el interior disfrutarás de un amplio espacio y de una combinación de elementos diseñada para maximizar la luminosidad.</p>
+                    </div>
+                </div>
             </div>
-            <div id="audiModelo">
-
+            <div id="audi2">
+                <div id="audiImg2">
+                    <img src="" alt="">
+                </div>
+                <div id="audiDatos2">
+                    <div id="audiModelo2">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="audiPrecio2">
+                        <h4>$</h4>
+                    </div>
+                    <div id="audiToTerr2">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="audiEnergia2">
+                        <h4>Energia: </h4>: 
+                    </div>
+                    <div id="audiDesc2">
+                        <p></p>
+                    </div>
+                </div>
             </div>
-            <div id="audiPrecio">
-
-            </div>
-            <div id="audiToTerr">
-
-            </div>
-            <div id="audiEnergia">
-
-            </div>
-            <div id="audiDesc">
-
+            <div id="audi3">
+                <div id="audiImg3">
+                    <img src="" alt="">
+                </div>
+                <div id="audiDatos3">
+                    <div id="audiModelo3">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="audiPrecio3">
+                        <h4>$</h4>
+                    </div>
+                    <div id="audiToTerr3">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="audiEnergia3">
+                        <h4>Energía: </h4>
+                    </div>
+                    <div id="audiDesc3">
+                        <p></p>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="chevrolet">
