añadi sass modo sexo

--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -106,7 +106,7 @@
         </div>
         <div id="consulta" class="container mt-5">
             <h2 class="text-center mb-4">Enviar Consulta Online</h2>
-            <form action="ruta_del_servidor" method="POST">
+            <form action="#" method="POST">
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" required>
