--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -130,7 +130,7 @@
             <h2>Audi</h2>
             <div id="audi1">
                 <div id="audiImg1">
-                    <img src="" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/audiA4 ALLROAD.jpg" alt="">
                 </div>
                 <div id="audiDatos1">
                     <div id="audiModelo1">
