comenze la pagina de registro de autos y "termine" el formulario

--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venda su auto</title>
 </head>
-<body>
+<body id="bodyVA">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -56,7 +56,7 @@
             <h1>Venda su auto</h1>
         </div>
 
-        <div class="form-container">
+        <div id="contenedorvaformulario" class="form-container">
             <form action="/submit" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Nombre:</label>
