--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -134,7 +134,7 @@
                 </div>
                 <div id="audiDatos1">
                     <div id="audiModelo1">
-                        <h4>Modelo: A4 ALLROAD QUATTRO</h4>
+                        <h4>Modelo: A4 QUATTRO</h4>
                     </div>
                     <div id="audiPrecio1">
                         <h4>$68.690.000</h4>
@@ -146,51 +146,51 @@
                         <h4>Energia: Fósil</h4>
                     </div>
                     <div id="audiDesc1">
-                        <p>Incorpora tecnologías de chasis y grupo motor que le permiten desenvolverse con soltura en cualquier terreno, en el interior disfrutarás de un amplio espacio y de una combinación de elementos diseñada para maximizar la luminosidad.</p>
+                        <p>Incorpora tecnologías de chasis y grupo motor que le permiten desenvolverse con soltura en cualquier terreno y en el interior disfrutarás de un amplio espacio</p>
                     </div>
                 </div>
             </div>
             <div id="audi2">
                 <div id="audiImg2">
-                    <img src="" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/audiA4 sedán.jpg" alt="">
                 </div>
                 <div id="audiDatos2">
                     <div id="audiModelo2">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: A4 SEDÁN</h4>
                     </div>
                     <div id="audiPrecio2">
-                        <h4>$</h4>
+                        <h4>$28.900.000</h4>
                     </div>
                     <div id="audiToTerr2">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: NO</h4>
                     </div>
                     <div id="audiEnergia2">
-                        <h4>Energia: </h4>: 
+                        <h4>Energia: Fósil</h4>: 
                     </div>
                     <div id="audiDesc2">
-                        <p></p>
+                        <p>Las amplias tomas de aire y la extremadamente ancha parrilla crean una primera impresión poderosa, además disfrutarás de una generosa cantidad de espacio</p>
                     </div>
                 </div>
             </div>
             <div id="audi3">
                 <div id="audiImg3">
-                    <img src="" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/audiQ2.jpg" alt="">
                 </div>
                 <div id="audiDatos3">
                     <div id="audiModelo3">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: Q2</h4>
                     </div>
                     <div id="audiPrecio3">
-                        <h4>$</h4>
+                        <h4>$58.000.000</h4>
                     </div>
                     <div id="audiToTerr3">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: SI</h4>
                     </div>
                     <div id="audiEnergia3">
-                        <h4>Energía: </h4>
+                        <h4>Energía: Fósil</h4>
                     </div>
                     <div id="audiDesc3">
-                        <p></p>
+                        <p>Tiene seis velocidades, 4,21 m de largo, 1,79 m de ancho y 1,51 m de alto y el espacio para el equipaje es de 1.050 [L] con los asientos abatidos y de 405 [L] sin abatirlos,</p>
                     </div>
                 </div>
             </div>
