--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -190,49 +190,147 @@
                         <h4>Energía: Fósil</h4>
                     </div>
                     <div id="audiDesc3">
-                        <p>Tiene seis velocidades, 4,21 m de largo, 1,79 m de ancho y 1,51 m de alto y el espacio para el equipaje es de 1.050 [L] con los asientos abatidos y de 405 [L] sin abatirlos,</p>
+                        <p>Tiene seis velocidades, 4,21 m de largo, 1,79 m de ancho y 1,51 m de alto y el espacio para el equipaje es de 1.050 [L] con los asientos abatidos y de 405 [L] sin abatirlos</p>
                     </div>
                 </div>
             </div>
         </div>
         <div id="chevrolet">
-            <div id="chevrImg">
-
+            <h2>Chevrolet</h2>
+            <div id="chevr1">
+                <div id="chevrImg1">
+                    <img src="../../assets/imagenes/tienda/autos/chevrCRUZE RS.png" alt="">
+                </div>
+                <div id="chevrDatos1">
+                    <div id="chevrModelo1">
+                        <h4>Modelo: CRUZE RS</h4>
+                    </div>
+                    <div id="chevrPrecio1">
+                        <h4>$28.730.900</h4>
+                    </div>
+                    <div id="chevrToTerr1">
+                        <h4>Todoterreno: NO</h4>
+                    </div>
+                    <div id="chevrEnergia1">
+                        <h4>Energia: Fósil</h4>
+                    </div>
+                    <div id="chevrDesc1">
+                        <p>El diseño impresiona con sus líneas atrevidas, su techo solar y su parrilla frontal exclusiva, tiene 6 velocidades, WI-FI nativo y sistema de arranque remoto</p>
+                    </div>
+                </div>
             </div>
-            <div id="chevrModelo">
-
+            <div id="chevr2">
+                <div id="chevrImg2">
+                    <img src="../../assets/imagenes/tienda/autos/chevrCRUZE-5.png" alt="">
+                </div>
+                <div id="chevrDatos2">
+                    <div id="chevrModelo2">
+                        <h4>Modelo: CRUZE 5</h4>
+                    </div>
+                    <div id="chevrPrecio2">
+                        <h4>$28.730.900</h4>
+                    </div>
+                    <div id="chevrToTerr2">
+                        <h4>Todoterreno: NO</h4>
+                    </div>
+                    <div id="chevrEnergia2">
+                        <h4>Energia: Fósil</h4>: 
+                    </div>
+                    <div id="chevrDesc2">
+                        <p>La parrilla frontal impresiona con sus detalles cromados, sumado a los faros traseros LED, una cámara frontal detecta los carriles, y un sistema de detección de colisiones frontales</p>
+                    </div>
+                </div>
             </div>
-            <div id="chevrPrecio">
-
-            </div>
-            <div id="chevrToTerr">
-
-            </div>
-            <div id="chevrEnergia">
-
-            </div>
-            <div id="chevrDesc">
-
+            <div id="chevr3">
+                <div id="chevrImg3">
+                    <img src="../../assets/imagenes/tienda/autos/chevrJOY-PLUS.png" alt="">
+                </div>
+                <div id="chevrDatos3">
+                    <div id="chevrModelo3">
+                        <h4>Modelo: JOY PLUS</h4>
+                    </div>
+                    <div id="chevrPrecio3">
+                        <h4>$21.611.900</h4>
+                    </div>
+                    <div id="chevrToTerr3">
+                        <h4>Todoterreno: SI</h4>
+                    </div>
+                    <div id="chevrEnergia3">
+                        <h4>Energía: Fósil</h4>
+                    </div>
+                    <div id="chevrDesc3">
+                        <p>Además de brindar más comodidad a toda tu familia, viene equipado con aire acondicionado, Bluetooth, 2 parlantes, levantavidrios eléctricos delanteros y Doble Airbag</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="renault">
-            <div id="renaImg">
-
+            <h2>Renault</h2>
+            <div id="rena1">
+                <div id="renaImg1">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="renaDatos1">
+                    <div id="renaModelo1">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="renaPrecio1">
+                        <h4>$</h4>
+                    </div>
+                    <div id="renaToTerr1">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="renaEnergia1">
+                        <h4>Energia: Fósil</h4>
+                    </div>
+                    <div id="renaDesc1">
+                        <p></p>
+                    </div>
+                </div>
             </div>
-            <div id="renaModelo">
-
+            <div id="rena2">
+                <div id="renaImg2">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="renaDatos2">
+                    <div id="renaModelo2">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="renaPrecio2">
+                        <h4>$</h4>
+                    </div>
+                    <div id="renaToTerr2">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="renaEnergia2">
+                        <h4>Energia: Fósil</h4>: 
+                    </div>
+                    <div id="renaDesc2">
+                        <p></p>
+                    </div>
+                </div>
             </div>
-            <div id="renaPrecio">
-
-            </div>
-            <div id="renaToTerr">
-
-            </div>
-            <div id="renaEnergia">
-
-            </div>
-            <div id="renaDesc">
-
+            <div id="rena3">
+                <div id="renaImg3">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="renaDatos3">
+                    <div id="renaModelo3">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="renaPrecio3">
+                        <h4>$</h4>
+                    </div>
+                    <div id="renaToTerr3">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="renaEnergia3">
+                        <h4>Energía: Fósil</h4>
+                    </div>
+                    <div id="renaDesc3">
+                        <p></p>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="ford">
@@ -298,3 +396,73 @@
     </main>
 </body>
 </html>
+
+<!--            
+            <h2></h2>
+            <div id="1">
+                <div id="Img1">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="Datos1">
+                    <div id="Modelo1">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="Precio1">
+                        <h4>$</h4>
+                    </div>
+                    <div id="ToTerr1">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="Energia1">
+                        <h4>Energia: Fósil</h4>
+                    </div>
+                    <div id="Desc1">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div id="2">
+                <div id="Img2">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="Datos2">
+                    <div id="Modelo2">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="Precio2">
+                        <h4>$</h4>
+                    </div>
+                    <div id="ToTerr2">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="Energia2">
+                        <h4>Energia: Fósil</h4>: 
+                    </div>
+                    <div id="Desc2">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div id="3">
+                <div id="Img3">
+                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                </div>
+                <div id="Datos3">
+                    <div id="Modelo3">
+                        <h4>Modelo: </h4>
+                    </div>
+                    <div id="Precio3">
+                        <h4>$</h4>
+                    </div>
+                    <div id="ToTerr3">
+                        <h4>Todoterreno: </h4>
+                    </div>
+                    <div id="Energia3">
+                        <h4>Energía: Fósil</h4>
+                    </div>
+                    <div id="Desc3">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+-->
