--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -272,10 +272,10 @@
                 </div>
                 <div id="renaDatos1">
                     <div id="renaModelo1">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: Stepway</h4>
                     </div>
                     <div id="renaPrecio1">
-                        <h4>$</h4>
+                        <h4>$26.520.000</h4>
                     </div>
                     <div id="renaToTerr1">
                         <h4>Todoterreno: </h4>
