imagenes de renault

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -268,90 +268,73 @@
             <h2>Renault</h2>
             <div id="rena1">
                 <div id="renaImg1">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/renSTEPWAY.png" alt="">
                 </div>
                 <div id="renaDatos1">
                     <div id="renaModelo1">
-                        <h4>Modelo: Stepway</h4>
+                        <h4>Modelo: STEPWAY</h4>
                     </div>
                     <div id="renaPrecio1">
                         <h4>$26.520.000</h4>
                     </div>
                     <div id="renaToTerr1">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: NO</h4>
                     </div>
                     <div id="renaEnergia1">
                         <h4>Energia: Fósil</h4>
                     </div>
                     <div id="renaDesc1">
-                        <p></p>
+                        <p>Su parrilla frontal cromada, su nuevo volante con estilo deportivo y su nuevo motor HR16 se acoplan perfectamente, tanto en circuitos urbanos como en ruta.</p>
                     </div>
                 </div>
             </div>
             <div id="rena2">
                 <div id="renaImg2">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/renDUSTER.png" alt="">
                 </div>
                 <div id="renaDatos2">
                     <div id="renaModelo2">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: DUSTER</h4>
                     </div>
                     <div id="renaPrecio2">
-                        <h4>$</h4>
+                        <h4>$30.200.000</h4>
                     </div>
                     <div id="renaToTerr2">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: SI</h4>
                     </div>
                     <div id="renaEnergia2">
                         <h4>Energia: Fósil</h4>: 
                     </div>
                     <div id="renaDesc2">
-                        <p></p>
+                        <p>Sus nuevas líneas mas agresivas, parrilla negro brillante, faros delanteros LED con DLR integrado, su espacio de baúl de hasta 475L te ayudan a desenvolverte en cualquier situación</p>
                     </div>
                 </div>
             </div>
             <div id="rena3">
                 <div id="renaImg3">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/renKANGOO.png" alt="">
                 </div>
                 <div id="renaDatos3">
                     <div id="renaModelo3">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: KANGOO</h4>
                     </div>
                     <div id="renaPrecio3">
-                        <h4>$</h4>
+                        <h4>$31.180.000</h4>
                     </div>
                     <div id="renaToTerr3">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: SI</h4>
                     </div>
                     <div id="renaEnergia3">
                         <h4>Energía: Fósil</h4>
                     </div>
                     <div id="renaDesc3">
-                        <p></p>
+                        <p>El control de velocidad crucero, su maletero de 800[L] que puede alcanzar los 3000[L] rebatiendo los asientos traseros y su seguridad lo hacen perfecto para viajar acompañado, </p>
                     </div>
                 </div>
             </div>
         </div>
         <div id="ford">
-            <div id="fordImg">
 
-            </div>
-            <div id="fordModelo">
-
-            </div>
-            <div id="fordPrecio">
-
-            </div>
-            <div id="fordToTerr">
-
-            </div>
-            <div id="fordEnergia">
-
-            </div>
-            <div id="fordDesc">
-
-            </div>
         </div>
         <div id="fiat">
             <div id="fiatImg">
